2011-05-06  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/skeleton_label.m: v0.4.1

	- Fix bug. Branches forming a loop were not correctly
	parameterized. We were choosing an extreme voxel, and then finding
	the furtherst voxel. In a "linear" branch this works fine, but in
	a loop, the furthest voxel is at the other end of the loop, so
	half the loop was being dropped. Now, we break loops open before
	computing Dijkstra, so all the voxels are included.

	* FiltersToolbox/bwregiongrow.cpp (MexFunction, getNeighbours):
	v0.2.2

	- Fix bug. As the neighbour r, c, s indices we are using a
	mwIndex, that is a long unsigned int. So when we were doing
	rcs[2]-1 and rcs[2]==0, instead of getting -1, the number wrapped
	around due to an implicit cast and gave 18446744073709551615.

	- Fix bug. If res was not provided, we were passing a NULL pointer
	to run(), that gave a segfault.

2011-05-04  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_seg2label_stats.m: v0.3.0

	- SCINRRD_SEG2LABEL_STATS Shape stats for each object in a
	multi-label segmentation; objects can be straightened with an
	skeleton or medial line before computing the stats.

	* Delete FiltersToolbox/landlocked_stats.m:

	- Move its functionality to
	FiltersToolbox/scinrrd_seg2label_stats.m to avoid having different
	functions that do similar things.

2011-05-03  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_squeeze.m: v0.1.2

	- Don't remove dimension from nrrd.axis if it's not a dummy
	dimension.

2011-04-29  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/skeleton_label.m: v0.4.0

	- Replace slow Dijkstra-based labelling of the whole image by new
	very fast region grow algorithm bwregiongrow().

	* FiltersToolbox/bwregiongrow.m: v0.2.0

	- Remove all Matlab code, that was very slow and inefficient. This
	function is now fully implemented in C++ in the corresponding MEX
	function, that is very fast.
